--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: mu.mu.rs
 markdown: redcarpet
 paginate: 10
-permalink: blog/:year/:month/:day/:title
+permalink: :categories/:year/:month/:day/:title
 
